# stm32_embeddedops_sample

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  docker-compose.yml  project.yml
.github/workflows/: ci.yml
App/Inc/: app_led.h  app_logger.h  app_temp_sensor.h
App/Src/: app_led.c  app_logger.c  app_temp_sensor.c
Core/Inc/: main.h  stm32f4xx_hal_conf.h
Core/Src/: main.c  stm32f4xx_it.c  syscalls.c  system_stm32f4xx.c
Startup/: STM32F446RETx_FLASH.ld
cmake/: arm-none-eabi-gcc.cmake  stm32hal.cmake
test/: test_app_led.c  test_app_logger.c  test_app_temp_sensor.c
test/support/: hal_stubs.h
